[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["ugauniyal <ugauniyal@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
